# rust-google-indexing-api

./: .gitignore  Cargo.toml  README.md  readme.md
src/: lib.rs
src/error/: mod.rs
src/http/: mod.rs
tests/: test_inspection.rs
