[package]
name = "google-indexing-api"
version = "0.1.0"
edition = "2021"

authors = ["uiuifree"]
description = "GoogleIndexing API"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = ["IndexingAPI"]
[dependencies]
reqwest ={version="0.11.10",features=["json","multipart","blocking"]}
urlencoding={version="2.1.0"}
# Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"


yup-oauth2="7.0.0"
[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }
