[package]
name = "google-indexing-api"
version = "0.1.4"
edition = "2021"

authors = ["uiuifree"]
description = "GoogleIndexing API"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = ["IndexingAPI", "GoogleIndexingAPI", "GoogleForJobs", "google", "api"]

repository = "https://github.com/uiuifree/rust-google-indexing-api"
[dependencies]
reqwest = { version = "0.11.10", features = ["json", "multipart", "blocking"] }
urlencoding = { version = "2.1.0" }
# Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

hyper = "0.14.26"
hyper-tls = "0.5.0"
[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }
yup-oauth2 = "7.0.0"
